yaml/hops-system.template.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hops-system
