yaml/hops-system.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hops-system
