yaml/model-serving-authenticator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-serving-authenticator
  namespace: hops-system
  labels:
    app: model-serving-authenticator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-serving-authenticator
  template:
    metadata:
      labels:
        app: model-serving-authenticator
    spec:
      serviceAccountName: model-serving-authenticator
      containers:
        - name: server
          image: "javierdlrm/model-serving-authenticator:latest"
          imagePullPolicy: Always
          ports:
            - name: auth-api
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: model-serving-authenticator
  namespace: hops-system
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: model-serving-authenticator
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: auth-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-serving-authenticator
  namespace: hops-system
spec:
  gateways:
  - mesh
  hosts:
  - model-serving-authenticator.hops-system.svc.cluster.local
  - model-serving-authenticator.hops-system.hopsworks.ai
  http:
  - route:
    - destination:
        host: model-serving-authenticator.hops-system.svc.cluster.local
