yaml/model-serving-webhook.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: model-serving-webhook
  namespace: hops-system
webhooks:
  - name: model-serving-webhook.hops-system.svc
    clientConfig:
      service:
        name: model-serving-webhook
        namespace: hops-system
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUROakNDQWg2Z0F3SUJBZ0lKQU1ObVFhdVEvZFQvTUEwR0NTcUdTSWIzRFFFQkN3VUFNREF4TGpBc0JnTlYKQkFNTUpXMXZaR1ZzTFhObGNuWnBibWN0ZDJWaWFHOXZheTVvYjNCekxYTjVjM1JsYlM1emRtTXdIaGNOTWpJdwpOVE14TVRjd01EVXdXaGNOTXpJd05USTRNVGN3TURVd1dqQXdNUzR3TEFZRFZRUUREQ1Z0YjJSbGJDMXpaWEoyCmFXNW5MWGRsWW1odmIyc3VhRzl3Y3kxemVYTjBaVzB1YzNaak1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0MKQVE4QU1JSUJDZ0tDQVFFQTJwd2JlTHBKcTZsT0c5YjdnWWlMYm5acjRVUUdIQ1lPRVlFRGlqSENLaDBhOFlPTgphRHo3Vk03ZWFD [...]
    objectSelector:
      matchExpressions:
      - key: serving.hops.works/id
        operator: Exists
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-serving-webhook
  namespace: hops-system
  labels:
    app: model-serving-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-serving-webhook
  template:
    metadata:
      labels:
        app: model-serving-webhook
    spec:
      containers:
        - name: server
          image: "javierdlrm/model-serving-webhook:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: webhook-api
          volumeMounts:
            - name: model-serving-webhook-tls-certs
              mountPath: /secrets/tls
              readOnly: true
      volumes:
        - name: model-serving-webhook-tls-certs
          secret:
            secretName: model-serving-webhook-tls
---
apiVersion: v1
kind: Service
metadata:
  name: model-serving-webhook
  namespace: hops-system
spec:
  selector:
    app: model-serving-webhook
  ports:
    - port: 443
      targetPort: webhook-api
